--- a/watch.html
+++ b/watch.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-   <script type='text/javascript' src='//pl20459971.revenuecpmgate.com/fb/34/0a/fb340a740dd03ea7820b0ea96f981f62.js'></script>
-    <meta charset="UTF-8" />
+<script type='text/javascript' src='//pl20189596.effectivegatecpm.com/3f/7c/1e/3f7c1efc2e328a6ede365fad4a33bb62.js'></script>
+	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SportsOneHD | Emebed</title>
     <link rel="stylesheet" href="./style.css">
@@ -23,57 +23,57 @@
         <div class="content-box">
             <section class="main-content">
                 <div class="ad-center">
-                <script type="text/javascript">
+               <script type="text/javascript">
 	atOptions = {
-		'key' : '50f0e4965a33420f406fc79aaf3d9aa5',
+		'key' : 'bb6db1a6e2dc849ae046eb8e424c6131',
 		'format' : 'iframe',
 		'height' : 60,
 		'width' : 468,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/50f0e4965a33420f406fc79aaf3d9aa5/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/bb6db1a6e2dc849ae046eb8e424c6131/invoke.js"></script>
                 </div>
                 <div class="iframe-container">
                                        <iframe id="player" src="" allowfullscreen allow="encrypted-media"></iframe>
                 </div>
                 <div class="ad-center">
-                <script type="text/javascript">
+              <script type="text/javascript">
 	atOptions = {
-		'key' : '39467660c73861336aaa8d77bcee730d',
+		'key' : 'b570fab13331550ebc82dcea27f77843',
 		'format' : 'iframe',
 		'height' : 50,
 		'width' : 320,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/39467660c73861336aaa8d77bcee730d/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/b570fab13331550ebc82dcea27f77843/invoke.js"></script>
                 </div>
             </section>
             <aside class="sidebar">
                 <div class="ad">
-                 <script type="text/javascript">
+               <script type="text/javascript">
 	atOptions = {
-		'key' : '19fa0859b9fe8c34ab3609396f2ba9ce',
+		'key' : 'ea0acfdeffd0deeedd88b561869f7ca1',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/19fa0859b9fe8c34ab3609396f2ba9ce/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ea0acfdeffd0deeedd88b561869f7ca1/invoke.js"></script>
                 </div>
                 <div class="ad">
-                <script type="text/javascript">
+               <script type="text/javascript">
 	atOptions = {
-		'key' : 'c2cb9033f43d6c62e82bd283fa761db5',
+		'key' : 'bb4b4397b97db5d64bea022613c9fa09',
 		'format' : 'iframe',
 		'height' : 300,
 		'width' : 160,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c2cb9033f43d6c62e82bd283fa761db5/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/bb4b4397b97db5d64bea022613c9fa09/invoke.js"></script>
                 </div>
             </aside>
         </div>
